# lennard-johnes-gas-sim

./: .gitignore  1.ipynb  1.typ  Cargo.toml  README.md
renderer/: main.rs
src/: lib.rs  main.rs  sim.rs  sim2.rs  utils.rs
