[package]
name = "bevy-playground"
version = "0.1.0"
edition = "2024"

[dependencies]
accurate = "0.4.1"
average = { version = "0.16.0", features = ["std"] }
bevy_egui = { version = "0.33.0", default-features = false, features = [
  "render",
  "default_fonts",
] }
bevy_framepace = "0.18.0"
bevy_mod_outline = "0.9.1"
egui_plot = "0.31.0"
inline-python = "0.14.0"
itertools = "0.14.0"
nalgebra = "0.33.2"
ndarray = "0.16.1"
rand = "0.9.0"
rand_distr = "0.5.1"
rayon = "1.10.0"
thread_local = "1.1.8"

[dependencies.bevy]
version = "0.15.1"
default-features = false
features = [
  "dynamic_linking",
  "wayland",

  # "android-game-activity",
  # "android_shared_stdcxx",
  # "animation",
  # "bevy_asset",
  # "bevy_audio",
  "bevy_color",
  "bevy_core_pipeline",
  # "bevy_gilrs",
  "bevy_gizmos",
  # "bevy_gltf",
  # "bevy_mesh_picking_backend",
  "bevy_pbr",
  "bevy_picking",
  "bevy_render",
  # "bevy_scene",
  # "bevy_sprite",
  # "bevy_sprite_picking_backend",
  "bevy_state",
  # "bevy_text",
  # "bevy_ui",
  # "bevy_ui_picking_backend",
  "bevy_window",
  "bevy_winit",
  # "custom_cursor",
  # "default_font",
  # "hdr",
  "multi_threaded",
  # "png",
  # "smaa_luts",
  # "sysinfo_plugin", # dynamic linking
  "tonemapping_luts",
  # "vorbis",
  # "webgl2",
  # "x11",
]

[profile.dev]
opt-level = 3
debug = 0
